fixed font size issues on mobile

--- a/app/assets/stylesheets/listing.css.scss
+++ b/app/assets/stylesheets/listing.css.scss
@@ -79,7 +79,7 @@ textarea {
             margin: 0;
             @include span-columns(4);
             h1 { a { font-size: 16px; margin-bottom: 4em; } }
-            p { font-size: 12px; margin-right: -4px;}
+            p { font-size: 2px; margin-right: -4px;}
           }
           h1 {
             opacity: 0;
